# house-plan-parser

./: .gitignore  README.md  extract_plumbing_data.py  main.py  pyproject.toml
core/: __init__.py
core/chains/: __init__.py  extraction.py  validation.py
core/models/: __init__.py  plumbing.py
workflows/: __init__.py  plumbing.py
