[project]
name = "house-plan-parser"
version = "0.1.0"
description = "A tool for extracting and validating plumbing data from house plan PDFs using OCR and LLM-based validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdf2image>=1.16.3",
    "transformers>=4.36.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "pytesseract>=0.3.10",
    "ipython>=8.18.0",
    "pdfplumber>=0.10.3",
    "torch>=2.1.0",
    "protobuf>=4.25.1",
    "sentencepiece>=0.1.99",
    "unstructured>=0.10.30",
    "python-docx>=1.0.1",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pi_heif>=0.13.0",
    "unstructured-inference>=0.7.23",
    "psutil>=5.9.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.0.1",
    "langgraph>=0.1.0",
    "pydantic>=2.5.0",
    "graphviz>=0.20.1",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "unstructured.pytesseract>= 0.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["house_plan_parser"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
